@@ -288,6 +288,9 @@
 
 	Fixed possible skewing of relative files positions in history by :restart.
 
+	Fixed off-by-one error on reducing history size, which could led to
+	loosing last directory history element.
+
 0.8.2-beta to 0.8.2
 
 	Added support for matchit to filetype plugin.  Patch by filterfalse.
